--- a/src/components/characters/Character.css
+++ b/src/components/characters/Character.css
@@ -9,3 +9,11 @@
   display: flex;
   flex-direction: column;
 }
+
+.Character li {
+  list-style: none;
+}
+
+.Character img {
+  max-height: 10rem;
+}
