--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,15 @@
 .Header {
   display: flex;
   padding: 5px;
+  justify-content: center;
+}
+
+.Header h1 {
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  border: 2px solid gold;
+  padding: 10px;
 }
 
 .Header button {
@@ -8,4 +17,5 @@
   width: 60px;
   height: 40px;
   justify-content: center;
+  margin: 10px;
 }
